// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rectangle Widget should render with {"borderStyle":"dashed","fill":"none","borderColor":"black","borderThickness":5} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="none"
        height="100%"
        stroke="black"
        stroke-dasharray="10,5"
        stroke-width="5"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"dashed","fill":"red","borderColor":"black","borderThickness":10} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="red"
        height="100%"
        stroke="black"
        stroke-dasharray="10,5"
        stroke-width="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"dashed","fill":"yellow","borderColor":"red","borderThickness":25} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="yellow"
        height="100%"
        stroke="red"
        stroke-dasharray="10,5"
        stroke-width="25"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"dotted","fill":"blue","borderColor":"black","borderThickness":15} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="blue"
        height="100%"
        stroke="black"
        stroke-dasharray="3,3"
        stroke-width="15"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"dotted","fill":"none","borderColor":"black","borderThickness":5} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="none"
        height="100%"
        stroke="black"
        stroke-dasharray="3,3"
        stroke-width="5"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"dotted","fill":"purple","borderColor":"blue","borderThickness":30} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="purple"
        height="100%"
        stroke="blue"
        stroke-dasharray="3,3"
        stroke-width="30"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"solid","fill":"green","borderColor":"white","borderThickness":20} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="green"
        height="100%"
        stroke="white"
        stroke-dasharray="1,0"
        stroke-width="20"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"solid","fill":"none","borderColor":"black","borderThickness":5} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="none"
        height="100%"
        stroke="black"
        stroke-dasharray="1,0"
        stroke-width="5"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Rectangle Widget should render with {"borderStyle":"solid","fill":"red","borderColor":"black","borderThickness":5} correctly 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <svg
      pointer-events="none"
      style="width: 100%; height: 100%;"
    >
      <rect
        fill="red"
        height="100%"
        stroke="black"
        stroke-dasharray="1,0"
        stroke-width="5"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;
